// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@kopflos-cms/pages/lib/Plugin.js base with slash deployedResources should generate resource shapes for pages 1`] = `
"
<https://kopflos.described.at/Pages> <urn:talos:action> <urn:talos:overwrite> .

<https://kopflos.described.at/Pages#test-page.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org/> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"test-page.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/test-page.html$\\" ;
	] ;
	<http://www.w3.org/ns/shacl#property> [
		<http://www.w3.org/ns/shacl#path> <http://schema.org/mainEntity> ;
		<http://www.w3.org/ns/shacl#pattern> \\"https://example.org//about\\" ;
	] .

<https://kopflos.described.at/Pages#relative-entity.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org/> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"relative-entity.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/relative-entity.html$\\" ;
	] ;
	<http://www.w3.org/ns/shacl#property> [
		<http://www.w3.org/ns/shacl#path> <http://schema.org/mainEntity> ;
		<http://www.w3.org/ns/shacl#pattern> \\"about\\" ;
	] .

<https://kopflos.described.at/Pages#no-entity.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org/> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"no-entity.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/no-entity.html$\\" ;
	] .

<https://kopflos.described.at/Pages#index.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org/> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"index.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/index.html$\\" ;
	], [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/$\\" ;
	] .

<https://kopflos.described.at/Pages#child%2Findex.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org/> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"child/index.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/child/index.html$\\" ;
	], [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/child$\\" ;
	] .

"
`;

exports[`@kopflos-cms/pages/lib/Plugin.js base without slash deployedResources should generate resource shapes for pages 1`] = `
"
<https://kopflos.described.at/Pages> <urn:talos:action> <urn:talos:overwrite> .

<https://kopflos.described.at/Pages#test-page.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"test-page.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/test-page.html$\\" ;
	] ;
	<http://www.w3.org/ns/shacl#property> [
		<http://www.w3.org/ns/shacl#path> <http://schema.org/mainEntity> ;
		<http://www.w3.org/ns/shacl#pattern> \\"https://example.org/about\\" ;
	] .

<https://kopflos.described.at/Pages#relative-entity.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"relative-entity.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/relative-entity.html$\\" ;
	] ;
	<http://www.w3.org/ns/shacl#property> [
		<http://www.w3.org/ns/shacl#path> <http://schema.org/mainEntity> ;
		<http://www.w3.org/ns/shacl#pattern> \\"about\\" ;
	] .

<https://kopflos.described.at/Pages#no-entity.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"no-entity.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/no-entity.html$\\" ;
	] .

<https://kopflos.described.at/Pages#index.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"index.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/index.html$\\" ;
	], [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/$\\" ;
	] .

<https://kopflos.described.at/Pages#child%2Findex.ts> a <https://kopflos.described.at/ResourceShape> ;
	<https://kopflos.described.at/api> <https://example.org> ;
	<https://kopflos.described.at/handler> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/Handler> ;
		<https://kopflos.described.at/method> \\"GET\\" ;
		<https://code.described.at/implementedBy> (
			[
				<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://code.described.at/EcmaScriptModule> ;
				<https://code.described.at/link> <node:@kopflos-labs/pages/handler.js#default> ;
				<https://code.described.at/arguments> (
					\\"child/index.ts\\"
				) ;
			]
		) ;
	] ;
	<http://www.w3.org/ns/shacl#target> [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/child/index.html$\\" ;
	], [
		<http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://kopflos.described.at/PatternedTarget> ;
		<https://kopflos.described.at/regex> \\"^https://example.org/child$\\" ;
	] .

"
`;
